# EMMA

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.md  cli.md  imf_parameters.md  pypi_release.md  usage.md
examples/: detect_missing_bins.py  reconstruct_matrix.py  restore_auto_mask.py  restore_with_mask.py
notebooks/: EMMA_baseline_analysis.ipynb  EMMA_tutorial.ipynb
src/emma_3dgenome/: __init__.py  cli.py  config.py  emd.py  engine.py  initialization.py  io.py  logging_utils.py  losses.py  masks.py  metrics.py  model.py  plotting.py  preprocessing.py  reconstruct.py  restore.py  result.py  training.py  utils.py
tests/: test_config.py  test_io_window.py  test_masks.py  test_preprocessing.py  test_reconstruct_small.py  test_restore_small.py
